@@ -4,6 +4,8 @@ this repository contains the full copyright notices and license terms. -->
 <form>
     <label name="name"/>
     <field name="name"/>
+    <label name="active"/>
+    <field name="active"/>
     <label name="journal"/>
     <field name="journal"/>
     <label name="currency"/>
