@@ -1,3 +1,5 @@
+* Allow statement journals to be deactivated
+
 Version 6.0.0 - 2021-05-03
 * Bug fixes (see mercurial logs for details)
 * Warn user when posting a statement with cancelled or paid invoices
